# compiler-stuff-with-llvm

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  cswl-sim  default.nix  flake.nix  header  meson.build  meson.format  meson_options.txt  new.ll  pclc  rust-toolchain.toml
.github/workflows/: build.yaml  lint.yaml
artifacts/01-sdl-stuff/llvm-ir/: day_night-a22edfa2aebeed9c.ll  day_night.ll
artifacts/02-pass-stuff/llvm-ir/: instrumented.ll
artifacts/02-pass-stuff/results/: window-1  window-2  window-3  window-4  window-5
artifacts/03-ad-hoc-ir-generation/llvm-ir/: day_night.ll
cswl-irgen/: Cargo.toml  default.nix
cswl-irgen/src/: main.rs
cswl-pass/: Cargo.toml  default.nix
cswl-pass-logger/: Cargo.toml
cswl-pass-logger/src/: lib.rs
cswl-pass/src/: lib.rs
cswl-pass/src/passes/: log_inserter.rs  mod.rs  opcode_counter.rs
cswl-sim/: Cargo.toml  build.rs  meson.build  meson_options.txt
cswl-sim/scripts/: build_cargo.sh
include/cbindgen/: bindings.h
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
nix/treefmt/: flake-module.nix
scripts/: build_cargo.sh
src/: day_night.c
src/c/: day_night.c
src/graphics/: mod.rs
subprojects/: .gitignore  cswl-sim  ctti.wrap  popl-1.3.0.wrap
subprojects/cswl-sim/: default.nix  meson.build  meson_options.txt
subprojects/cswl-sim/include/cswl-sim/: bindings.h
subprojects/ezvis/: .gitignore  README.md  meson.build
subprojects/ezvis/include/ezvis/: ezvis.hpp
subprojects/ezvis/test/: meson.build
subprojects/ezvis/test/src/: ezvis.cpp
subprojects/graphs/: .gitignore  meson.build
subprojects/graphs/include/graphs/: dag.hpp  directed_graph.hpp
subprojects/graphs/test/: meson.build
subprojects/graphs/test/src/: dag.cpp  directed_graph.cpp
subprojects/packagefiles/popl-1.3.0/: meson.build
subprojects/pclc/: README.md  meson.build  meson_options.txt
subprojects/pclc/examples/: fib_long.pcl  fib_simple.pcl  fractals.pcl  func.pcl  init.pcl  not.pcl  read.pcl  recursive.pcl  scan.pcl
subprojects/pclc/include/: codegen.hpp
subprojects/pclc/include/bytecode_vm/: bytecode_builder.hpp  decl_vm.hpp  disassembly.hpp  opcodes.hpp  virtual_machine.hpp
subprojects/pclc/include/frontend/: dumper.hpp  error.hpp  frontend_driver.hpp  scanner.hpp  source.hpp  symtab.hpp
subprojects/pclc/include/frontend/analysis/: function_explorer.hpp  function_table.hpp  main_explorer.hpp  semantic_analyzer.hpp
subprojects/pclc/include/frontend/ast/: ast_container.hpp  ast_copier.hpp  ast_nodes.hpp  node_identifier.hpp
subprojects/pclc/include/frontend/ast/ast_nodes/: assignment_statement.hpp  binary_expression.hpp  constant_expression.hpp  error_node.hpp  function_call.hpp  function_decl.hpp  i_ast_node.hpp  if_statement.hpp  print_statement.hpp  read_expression.hpp  return_statement.hpp  statement_block.hpp  unary_expression.hpp  variable_declaration.hpp  variable_expression.hpp  while_statement.hpp
subprojects/pclc/include/frontend/types/: types.hpp
subprojects/pclc/include/llvm_codegen/: intrinsics.hpp  llvm_codegen.hpp
subprojects/pclc/include/utils/: algorithm.hpp  concepts.hpp  files.hpp  misc.hpp  transparent.hpp
subprojects/pclc/src/: common.hpp  meson.build  pclc.cpp  pcldis.cpp  pclvm.cpp
subprojects/pclc/src/bytecode_vm/: decl_vm.cpp  meson.build
subprojects/pclc/src/frontend/: ast_copier.cpp  dumper.cpp  function_explorer.cpp  meson.build  parser.y  scanner.l  semantic_analyzer.cpp
subprojects/pclc/src/llvm_codegen/: intrinsics.cpp  llvm_codegen.cpp  meson.build
subprojects/pclc/test/: cfg.lit.py  lit.site.cfg.py.in  meson.build
subprojects/pclc/test/basic/: abs.pcl  abs.pcl.ans  abs.pcl.in  assignments.pcl  assignments.pcl.ans  fact.pcl  fib.pcl  fib.pcl.ans  fib.pcl.in  if.pcl  shift_right.pcl  while.pcl  while.pcl.ans  while.pcl.in
subprojects/pclc/test/blocks/: block.pcl  block_with_return_and_side_effect.pcl  cond_block.pcl  conditional_return.pcl  conditional_return.pcl.ans  conditional_return.pcl.in  emptyexpr.pcl  explicit_return.pcl  nested_and_chained_blocks.pcl  nested_block_returns.pcl  nested_blocks.pcl  print_block.pcl  print_sum_of_blocks.pcl  print_sum_of_blocks.pcl.ans  simple_block_return.pcl  simple_block_sum.pcl  unused_block_return_value.pcl
subprojects/pclc/test/errors/: ambiguous_call.pcl  call_in_sum.pcl  call_of_int.pcl  func_add.pcl  ill_formed.pcl  mismatch_call.pcl  mismatch_return_block.pcl  nested_redefinition.pcl  recursive.pcl  redeclare.pcl  redefinition.pcl  rename.pcl  undefined_call.pcl  use_of_void.pcl
subprojects/pclc/test/functions/: arg_call.pcl  args_of_different_types.pcl  basic.pcl  basic2.pcl  basic2.pcl.ans  call_in_sum.pcl  calls.pcl  conditional_return.pcl  conditional_return_2.pcl  empty.pcl  fact.pcl  fact_recursive.pcl  function_def_to_ptr_conv_print.pcl  increment.pcl  nested.pcl  nested_block_in_function.pcl  recursive_fib.pcl  recursive_fib.pcl.ans  recursive_fib.pcl.in  return_1_no_args.pcl  return_assignment.pcl  return_block_as_an_arg.pcl  several_args.pcl  void_function.pcl  void_function_composition.pcl
subprojects/pclc/test/globals/: 1.pcl  1.pcl.ans
subprojects/pclc/test/morefunctions/: test1.pcl  test2.pcl  test4.pcl  test6.pcl
subprojects/pclc/test/types/: 1.pcl  2.pcl  3.pcl  4.pcl  5.pcl  6.pcl
