[package]
name = "compiler_stuff_with_llvm"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
cbindgen = []

[dependencies]
itertools = "0.13.0"
once_cell = "1.20.0"
rand = "0.8.5"
sdl2 = "0.37.0"
send_wrapper = "0.6.0"

[build-dependencies]
cbindgen = "0.27.0"
