option(
    'tests',
    type: 'boolean',
    value: true,
    yield: true,
    description: 'Enable or disable tests',
)

option(
    'compiler_backend',
    type: 'combo',
    choices: ['vm', 'llvm'],
    value: 'vm',
    yield: true,
    description: 'Choose which backend to use for the compiler',
)
