[package]
name = "cswl-pass"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["llvm18-0"]
llvm18-0 = ["llvm-plugin/llvm18-0", "inkwell/llvm18-0"]
llvm17-0 = ["llvm-plugin/llvm17-0", "inkwell/llvm17-0"]
llvm16-0 = ["llvm-plugin/llvm16-0", "inkwell/llvm16-0"]
llvm15-0 = ["llvm-plugin/llvm15-0", "inkwell/llvm15-0"]
llvm14-0 = ["llvm-plugin/llvm14-0", "inkwell/llvm14-0"]
llvm13-0 = ["llvm-plugin/llvm13-0", "inkwell/llvm13-0"]
llvm12-0 = ["llvm-plugin/llvm12-0", "inkwell/llvm12-0"]

[dependencies]
llvm-plugin = "0.6"
inkwell = "0.5"
prettytable-rs = "0.10.0"
ffi = "0.1.1"
